<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="8dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblFamily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/lblfamily"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/txtvwFamily"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/txtvwFamily"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:autoSizeTextType="uniform"
                android:gravity="clip_horizontal|center_horizontal|center_vertical"
                android:lines="1"
                android:text="@string/family"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.812" />

            <Space
                android:id="@+id/spacing1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:background="#1E1D1D"
                android:backgroundTint="#131111"
                android:scrollbarSize="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtvwFamily"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.40" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.60" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.80" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/lblCodi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblcodi"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtvwCodi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/codi"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintStart_toEndOf="@+id/lblCodi"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lblDescrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/lbldescrip"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/txtvwDescrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/descrip"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintStart_toEndOf="@+id/lblDescrip"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <TextView
                android:id="@+id/lblPreu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:text="@string/lblpreu"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/txtvwPreu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/preu"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/lblPreu"
                app:layout_constraintTop_toTopOf="@+id/guideline3"
                app:layout_constraintVertical_bias="0.666" />

            <TextView
                android:id="@+id/lblPrIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblpriva"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/guideline2" />

            <TextView
                android:id="@+id/txtvwPrIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/priva"
                app:layout_constraintBottom_toTopOf="@+id/guideline3"
                app:layout_constraintEnd_toStartOf="@+id/guideline7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/lblPrIva"
                app:layout_constraintTop_toTopOf="@+id/guideline2"
                app:layout_constraintVertical_bias="0.333" />

            <TextView
                android:id="@+id/lblStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblstock"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <TextView
                android:id="@+id/txtvwStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/stock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblStock"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <ImageView
                android:id="@+id/imv_Delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_delete_24" />

            <ImageView
                android:id="@+id/img_Family"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_computer_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>